@@ -4,7 +4,7 @@ use strict;
 use warnings;
 use ExtUtils::MakeMaker;
 
-WriteMakefile
+my %WriteMakefileArgs =
   (
    'NAME'               => 'Math::BigInt',
    'VERSION_FROM'       => 'lib/Math/BigInt.pm',
@@ -15,10 +15,16 @@ WriteMakefile
                             'Test::More'          => 0.94,
                             'Math::Complex'       => 1.39,
                            },
-   'INSTALLDIRS'        => 'perl',      # install over the core version
    'LICENSE'            => 'perl_5',
    'LIBS'               => [''],        # e.g., '-lm'
    'DEFINE'             => '',          # e.g., '-DHAVE_SOMETHING'
    'INC'                => '',          # e.g., '-I/usr/include/other'
    'SIGN'               => 1,
   );
+
+# Install over the core version? (Cf. CPAN RT #119199 and #119225.)
+
+$WriteMakefileArgs{INSTALLDIRS} = 'perl'
+  if $] < 5.012;
+
+WriteMakefile(%WriteMakefileArgs);
