@@ -1,3 +1,10 @@
+2016-12-13 v1.999806 pjacklam
+
+ * Add more logic to Makefile.PL regarding INSTALLDIRS (CPAN RT #119199
+   and #119225).
+
+ * In the TODO file, remove stuff that has been implemented.
+
 2016-12-11 v1.999805 pjacklam
 
  * Fix Makefile.PL so that this module installs over the core version.
